# sigma

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
src/sigma/: __init__.py  agent.py  cache.py  cli.py  code_sandbox.py  config.py  convergence.py  cost_tracker.py  discovery.py  guardrails.py  hooks.py  human_gate.py  knowledge.py  learning.py  llm.py  log.py  memory.py  observability.py  orchestrator.py  protocol.py  provenance.py  pydantic_validator.py  replay.py  schema_validator.py  state.py  tool_cache.py  triggers.py
src/sigma/benchmark/: __init__.py  metrics.py  reporter.py  runner.py  tasks.py
src/sigma/tau/: __init__.py  benchmark.py  capability.py  config.py  decomposer.py  detector.py  executor.py  hooks.py  mode_selector.py  orchestrator.py  resolver.py  types.py
src/sigma/tools/: __init__.py  document_tools.py  file_search.py  filesystem.py  http_api.py  sql_database.py  web_scrape.py
tests/: test_agent.py  test_benchmark.py  test_cache.py  test_cli.py  test_code_sandbox.py  test_config.py  test_convergence.py  test_cost_tracker.py  test_discovery.py  test_guardrails.py  test_hooks.py  test_human_gate.py  test_knowledge.py  test_learning.py  test_llm.py  test_log.py  test_memory.py  test_multimodal.py  test_observability.py  test_orchestrator.py  test_protocol.py  test_protocol_async.py  test_provenance.py  test_pydantic_validator.py  test_schema_validator.py  test_state.py  test_tau.py  test_tau_e2e.py  test_tier1_features.py  test_tool_cache.py  test_tools.py  test_triggers.py  verification_real_scenario.py
